<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="header_main_screen">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="media">Медиатека</string>
    <string name="dark_theme_settings">Темная тема</string>
    <string name="share_app_settings">Поделиться приложением</string>
    <string name="write_to_team_settings">Написать в поддержку</string>
    <string name="user_doc_settings">Пользовательское соглашение</string>

    <string name="android_developer_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="to_developers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks_to_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="my_email">shaxtyr@yandex.ru</string>
    <string name="user_agreement">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="clear_text">x</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="communication_problems">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интренету</string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="progress">0:30</string>

    <string name="my_favorite_tracks">Избранные треки</string>
    <string name="my_playlists">Плейлисты</string>
    <string name="empty_my_favorite_tracks">Ваша медиатека пуста</string>
    <string name="empty_my_playlists">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="remove_track">Хотите удалить трек?</string>
    <string name="remove_playlist">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="track_already_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added">Добавлено в плейлист %1$s</string>

    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="data_wii_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>

    <string name="playlist_creating">Плейлист %1$s создан</string>
    <string name="my_covers">mycovers</string>
    <string name="file_name_time_stamp">"cover_%1$d.jpg</string>

    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="total_time_tracks">"%1$s %2$s</string>
    <string name="count_tracks">"%1$d %2$s</string>
    <string name="empty_list_info">"В этом плейлисте еще нет треков</string>
    <string name="empty_list_message">"В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">"Поделиться</string>
    <string name="edit_playlist">"Редактировать информацию</string>
    <string name="delete_playlist">"Удалить плейлист</string>

    <string name="save">"Сохранить</string>
    <string name="edit">"Редактировать</string>

    <string name="without_network">Отсутствует подключение к сети</string>


</resources>