<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/medium_font_16"
    android:paddingEnd="12dp"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    tools:layout="@layout/fragment_settings"
    tools:theme="@style/Base.Theme.PlaylistMaker">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp"
        style="@style/TopStringStyle"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingVertical="21dp"
        android:text="@string/dark_theme_settings"
        style="@style/SwitchStyleSettingsScreen" />

    <TextView
        android:id="@+id/share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:text="@string/share_app_settings"
        style="@style/TextStyleSettingsScreen"
        app:drawableEndCompat="@drawable/ic_share_24" />

    <TextView
        android:id="@+id/write_to_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:text="@string/write_to_team_settings"
        style="@style/TextStyleSettingsScreen"
        app:drawableEndCompat="@drawable/ic_support_24" />

    <TextView
        android:id="@+id/user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:text="@string/user_doc_settings"
        style="@style/TextStyleSettingsScreen"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24"/>

</LinearLayout>