<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/medium_font_16"
    android:paddingEnd="12dp"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    tools:context=".presentation.settings.SettingsActivity"
    tools:theme="@style/Base.Theme.PlaylistMaker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_from_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_arrow_back_24"
            style="@style/BackStyleSettingsScreen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_gravity="center"
            style="@style/TopStringStyle"
            android:text="@string/settings" />

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingVertical="21dp"
        android:text="@string/dark_theme_settings"
        style="@style/SwitchStyleSettingsScreen" />

    <TextView
        android:id="@+id/share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:text="@string/share_app_settings"
        style="@style/TextStyleSettingsScreen"
        app:drawableEndCompat="@drawable/ic_share_24" />

    <TextView
        android:id="@+id/write_to_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:text="@string/write_to_team_settings"
        style="@style/TextStyleSettingsScreen"
        app:drawableEndCompat="@drawable/ic_support_24" />

    <TextView
        android:id="@+id/user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:text="@string/user_doc_settings"
        style="@style/TextStyleSettingsScreen"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24"/>

</LinearLayout>