<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    tools:context=".SearchActivity"
    tools:theme="@style/Base.Theme.PlaylistMaker">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_font_16"
        android:layout_marginEnd="@dimen/medium_font_16"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_from_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_arrow_back_24"
            style="@style/BackStyleSettingsScreen"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_gravity="center"
            style="@style/TopStringStyle"
            android:text="@string/search"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:orientation="horizontal"
        style="@style/LinearEditStyleSearchScreen">

        <EditText
            android:id="@+id/input_edit_text_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:drawablePadding="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor"
            style="@style/EditTextStyleSearchScreen"/>

        <ImageView
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="12dp"
            android:visibility="gone"
            android:src="@drawable/ic_clear_16"
            style="@style/ClearStyleSearchScreen"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_group_history_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingBottom="12dp"
            android:layout_gravity="center"
            android:text="@string/you_searched"
            style="@style/TextYouSearchedStyleSearchScreen"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/clear_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/clear_history"
            style="@style/PlaceholderButtonStyleSearchScreen" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/placeholderImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="16dp"
                android:visibility="invisible"
                tools:src="@tools:sample/avatars"/>

            <TextView android:id="@+id/placeholderMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="@style/PlaceholderMessageStyleSearchScreen"/>

            <Button
                android:id="@+id/placeholderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/update"
                android:visibility="invisible"
                style="@style/PlaceholderButtonStyleSearchScreen"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>